# cizge

./: .gitignore  0.bootstrap.js  Cargo.toml  LICENSE_MIT  bootstrap.js  deploy.sh  ideas  index.html  js_funcs.js
.github/workflows/: continuous_deployment.yml  continuous_integration.yml
docs/: 0.bootstrap.js
src/: beefy_graph.pest  graph.pest  graph.rs  graph_parser.rs  lib.rs  my_svg_writer.rs
www/: index.html  index.js  package-lock.json  package.json
