[package]
name = "gracalc"
version = "0.1.0"
authors = ["Ekin Igdir <igdir.ekin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
pest = "2.7.10"
pest_derive = "2.6"
lazy_static = "1.4.0"
bit-matrix = "0.7.1"
latex2mathml = "0.2.3"
layout-rs = { git = "https://github.com/ekinimo/layout.git", branch = "foreign_element" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
